<resources>
    <string name="app_name">BV Hồng Hưng - Đăng ký khám bệnh online</string>
    <string name="app_hello">Bệnh viện Đa khoa Hồng Hưng \nXin chào!</string>
    <string name="username_homepage_login">Username</string>
    <string name="username_homepage_login_detail">(SĐT dùng để đăng kí)</string>
    <string name="password_homepage_login">Password</string>
    <string name="password_homepage_login_detail">(Mật khẩu)</string>
    <string name="btn_dang_nhap_txt">Đăng nhập</string>
    <string name="dang_ky_link_text">Đăng ký tài khoản</string>
    <string name="quen_mat_khau_link_txt">Quên mật khẩu</string>
    <string name="txt_resetpassword_detail">Để được hỗ trợ đăng nhập tài khoản,\nAnh/Chị vui lòng nhập số điện thoại đã đăng ký\ntài khoản vào khung bên dưới</string>
    <string name="txt_sdt_full_string">Số điện thoại</string>
    <string name="txt_ho_va_ten">Họ và tên(*)</string>
    <string name="txt_ngay_thang_nam_sinh">Ngày tháng năm sinh(*)</string>

    <!-- overide imagepicker String -->
    <string name="title_choose_image_provider">Chọn nguồn hình ảnh</string>
    <string name="action_cancel">Hủy</string>
    <string name="title_gallery">Thư viện</string>
    <string name="title_camera">Máy ảnh</string>
    <!-- uCrop string resource start -->
    <string name="ucrop_label_original">Ảnh gốc</string>
    <string name="ucrop_label_edit_photo">Chỉnh sửa ảnh</string>
    <string name="ucrop_menu_crop">Cắt</string>
    <string name="ucrop_rotate">Xoay</string>
    <string name="ucrop_scale">Thu phóng</string>
    <string name="ucrop_crop">Cắt</string>
    <string name="btn_home_1">Đăng ký khám bệnh</string>
    <string name="btn_home_2">Đăng ký khám bệnh cho \nngười thân hoặc người khác</string>
    <string name="btn_home_3">Khai báo y tế để \nliên hệ công tác/thăm nuôi bệnh</string>
    <string name="btn_home_4">Tra cứu lịch sử khám bệnh</string>
    <string name="btn_home_5">Khai báo y tế \ndành cho nhân viên nội bộ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_dichvu_lienhe_hotline">Nếu chưa tìm được dịch vụ mình quan tâm\n\n<br /><br />Anh/Chị có thể liên hệ đến <font color='#00ae89'>
        hotline bệnh viện\n\n<br /><br />0276 3836 991 - 0941 696 939</font><br /><br />\n\nđể được hỗ trợ kịp thời nhất.</string>
    <string name="txt_toi_muon_kham_bac_si">Tôi muốn khám Bác sĩ</string>
    <string name="txt_toi_muon_kham_chuyen_khoa">Tôi muốn khám/tái khám Chuyên khoa</string>
    <string name="txt_toi_muon_dang_ky_dich_vu_khac">Tôi muốn đăng ký dịch vụ khác</string>
    <string name="txt_gia_dich_vu">Giá dịch vụ</string>
    <string name="txt_xet_nghiem_sang_loc">Anh/Chị cần phải xét nghiệm Test nhanh sàng lọc COVID trước khi vào Bệnh viện.\nĐể góp phần chung tay đẩy lùi dịch bệnh, rất mong Anh/Chị bỏ qua sự bất tiện này.</string>
    <string name="txt_title_khai_bao_y_te_noi_bo">Phần khai báo y tế dành cho nhân viên y tế<br />\n<font face="myriadpro_semiext"><i><small>(Tôi cam đoan những lời khai sau đây là sự thật)</small></i></font></string>
    <string name="txt_title_khai_bao_y_te_cong_tac">Phần khai báo y tế liên hệ công tác<br />\n<font face="myriadpro_semiext"><i><small>(Tôi cam đoan những lời khai sau đây là sự thật)</small></i></font></string>
    <string name="txt_title_khai_bao_y_te_nguoi_than">Thông tin người thân<br />\n<font face="myriadpro_semiext"><i><small>(Tôi cam đoan những lời khai sau đây là sự thật)</small></i></font></string>
    <string name="txt_title_khai_bao_y_te">Phần khai báo y tế<br />\n<font face="myriadpro_semiext"><i><small>(Tôi cam đoan những lời khai sau đây là sự thật)</small></i></font></string>
    <string name="txt_title_kham_nguoi_than">Phần đăng ký khám bệnh (*)<br />\n<font face="myriadpro_semiext"><i><small>(Chọn 1 trong 3 hình thức sau)</small></i></font></string>
    <string name="txt_gui_tin_nhan_otp">Một mã OTP đã được gửi đến SDT của Anh/chị\nAnh/Chị vui lòng nhập mã OTP và \nmật khẩu mới vào ô bên dưới. \nNếu không nhận được tin nhắn vui lòng liên hệ tổng đài</string>
    <string name="txt_lich_lam_viec_cua_bs_trong_tuan">Lịch làm việc của Bác sĩ trong tuần:</string>
    <string name="txt_offline_mode">Kết nối đến máy chủ bị mất !</string>
    <string name="txt_chon_khoan_thoi_gian_tra_cuu_lich_su_kham">Chọn khoảng thời gian\ntra cứu lịch sử khám bệnh</string>
    <string name="txt_thong_tin_lich_su_kham_chua_benh">Thông tin: Lịch sử khám chữa bệnh</string>
    <string name="txt_chon_1_trong_4_hinh_thuc_sau">Phần đăng kí khám bệnh<br />\n<i><small>(Chọn 1 trong 4 hình thức sau)</small></i></string>
    <string name="txt_nguoi_than_toi_muon_dang_ky_dich_vu_khac">Người thân tôi muốn đăng ký dịch vụ khác</string>
    <string name="txt_nguoi_than_toi_muon_kham_bac_si">Người thân tôi muốn khám Bác sĩ</string>
    <string name="txt_nguoi_than_toi_muon_kham_tai_kham_chuyen_khoa">Người thân tôi muốn khám/tái khám Chuyên khoa</string>
    <!-- uCrop string resource end -->
</resources>