<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="258dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:contentDescription="TODO"
        android:src="@drawable/toan_canh_bv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="fitEnd"
        android:src="@drawable/canh_chim_nen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/canh_chim_nen" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:fontFamily="@font/myriadpro_semiboldsemiext"
                android:text="@string/username_homepage_login"
                android:textColor="#009688"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/myriadpro_semiext"
                android:text="@string/username_homepage_login_detail"
                android:textColor="@color/textColorGreen" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_login_dobong"
            android:ems="10"
            android:inputType="textPersonName|textEmailAddress|phone"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:fontFamily="@font/myriadpro_semiboldsemiext"
                android:text="@string/password_homepage_login"
                android:textColor="#009688"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/myriadpro_semiext"
                android:text="@string/password_homepage_login_detail"
                android:textColor="@color/textColorGreen" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtUsername2"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_login_dobong"
            android:ems="10"
            android:inputType="textPersonName|textEmailAddress|phone"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="153dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_dang_nhap"
            android:elevation="10dp"
            android:text="@string/btn_dang_nhap_txt"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky_link_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/quen_mat_khau_link_txt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>