<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.KhaiBaoYTeActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/item_logo_helo_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-14dp"
        android:layout_marginBottom="-14dp"
        android:background="@drawable/logo_nen"
        android:paddingBottom="15dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_nen" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="-10dp"
                android:background="@android:color/transparent"
                android:overScrollMode="never"
                android:scrollbarStyle="@null"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@+id/include13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:paddingLeft="5dp">

                    </androidx.recyclerview.widget.RecyclerView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/textView38"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/textColorGreen"
                            android:fontFamily="@font/myriadpro_semiboldsemiext"
                            android:gravity="center"
                            android:text="@string/txt_chon_1_trong_4_hinh_thuc_sau"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TextContrastCheck" />

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/canh_chim_mot_ben"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/btnChonBS"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_green_light"
                        android:text="@string/txt_toi_muon_kham_bac_si"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorGreen"
                        android:translationZ="5dp" />

                    <Button
                        android:id="@+id/btnChonChuyenKhoa"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_green_light"
                        android:text="@string/txt_toi_muon_kham_chuyen_khoa"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorGreen"
                        android:translationZ="5dp" />

                    <Button
                        android:id="@+id/btnDichVuKhac"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_green_light"
                        android:text="@string/txt_toi_muon_dang_ky_dich_vu_khac"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorGreen"
                        android:translationZ="5dp" />

                    <Button
                        android:id="@+id/btnDuaNguoiThan"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_green_light"
                        android:text="Tôi đưa người thân đi khám bệnh"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorGreen"
                        android:translationZ="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnThoat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_shape_green"
                            android:text="Thoát"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:translationZ="5dp" />

                        <Button
                            android:id="@+id/btnDangKy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_shape_blue"
                            android:text="Đăng ký"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:translationZ="5dp" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/textColorGreen"
                android:fontFamily="@font/myriadpro_semiboldsemiext"
                android:gravity="center"
                android:text="@string/txt_title_khai_bao_y_te"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:scaleType="fitStart"
                android:src="@drawable/canh_chim_mot_ben"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/include13"
                layout="@layout/item_footer"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
